<resources>
    <string name="app_name">MovieTop</string>
    <string name="title_movie">榜单</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="recycler_status_loading">正在加载&#8230;</string>
    <string name="recycler_status_empty">没有数据了</string>
    <string name="recycler_status_error">出错了，点击后重试</string>

    <string name="movie_detail_summary">简介</string>
    <string name="movie_detail_personage">人物</string>
    <string name="movie_detail_genres">影片类型：%s</string>
    <string name="movie_detail_countries">制片国家/地区：%s</string>
    <string name="movie_detail_casts">主演：%s</string>
    <string name="movie_detail_directors">导演：%s</string>
    <string name="movie_detail_rating">评分：</string>
    <string name="movie_detail_rating_no">评分：暂无评分</string>

</resources>
